--- a/cloud-config-center.yml
+++ b/cloud-config-center.yml
@@ -11,7 +11,7 @@ spring:
     profiles: dev
     application:
         name: cloud-config-center
-dureka:
+eureka:
     client:
         service-url:
             defaultZone: http://eureka7001-dev.com:7001/eureka/
@@ -23,7 +23,7 @@ spring:
     profiles: test
     application:
         name: cloud-config-center
-dureka:
+eureka:
     client:
         service-url:
             defaultZone: http://eureka7001-test.com:7001/eureka/
