--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,7 @@ spirng:
          - dev
 
 ---
-server;
+server：
     port: 8201
 
 spring:
@@ -16,7 +16,7 @@ eureka:
         service-url:
             defaultZone: http://eureka7001-dev.com:7001/eureka/
 ---
-server;
+server：
     port: 8202
 
 spring:
