--- a/application.yml
+++ b/application.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
     client:
         service-url:
-            defaultZone: http://eureka7001-dev.com:7001/eureka/
+            defaultZone: http://eureka7001.com:7001/eureka/
 ---
 server:
     port: 8202
@@ -26,4 +26,4 @@ spring:
 eureka:
     client:
         service-url:
-            defaultZone: http://eureka7001-test.com:7001/eureka/
+            defaultZone: http://eureka7002.com:7002/eureka/
